kubernetes-manifests/customer-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-auth-service-deployment
  labels:
    app: customer-auth-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: customer-auth-service
  template:
    metadata:
      labels:
        app: customer-auth-service
    spec:
      containers:
      - name: customer-auth-service-container
        image: starrider315/customer-auth-service:v1.2
        ports:
        - containerPort: 5004
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
