kubernetes-manifests/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service-container
        image: starrider315/delivery-service:v1.0
        ports:
        - containerPort: 5003
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
