kubernetes-manifests/kitchen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-service-deployment
  labels:
    app: kitchen-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: kitchen-service
  template:
    metadata:
      labels:
        app: kitchen-service
    spec:
      containers:
      - name: kitchen-service-container
        image: starrider315/kitchen-service:v1.1
        ports:
        - containerPort: 5002
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
