kubernetes-manifests/menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service-deployment
  labels:
    app: menu-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      containers:
      - name: menu-service-container
        image: starrider315/menu-service:v1.2
        ports:
        - containerPort: 5006
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: menu-volume
          mountPath: /app/config
      volumes:
      - name: menu-volume
        configMap:
          name: menu-config
