kubernetes-manifests/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment
  labels:
    app: payment-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service-container
        image: starrider315/payment-service:v1.2
        ports:
        - containerPort: 5005
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
