kubernetes-manifests/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: TCP
      port: 5003 # The internal port for the service
      targetPort: 5003 # The port the container is listening on
