kubernetes-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubepizza-frontend
spec:
  selector:
    app: kubepizza-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
