kubernetes-manifests/kitchen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchen-service
spec:
  selector:
    app: kitchen-service
  ports:
    - protocol: TCP
      port: 5002 # The internal port for the service
      targetPort: 5002 # The port the container is listening on
