kubernetes-manifests/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  selector:
    app: menu-service
  ports:
    - protocol: TCP
      port: 5006 # The port the service will listen on (internal to the cluster)
      targetPort: 5006 # The port the container is listening on
