kubernetes-manifests/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
