kubernetes-manifests/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 5001 # The internal port for the service
      targetPort: 5001 # The port the container is listening on
