kubernetes-manifests/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 5005 # The internal port for the service
      targetPort: 5005 # The port the container is listening on
