kubernetes-manifests/kubepizza-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubepizza-ingress
spec:
  rules:
  - http:
      paths:
      - path: /menu
        pathType: Prefix
        backend:
          service:
            name: menu-service
            port:
              number: 5006
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubepizza-frontend
            port:
              number: 80
